# ditto_ros_bridge

./: .gitignore  MIT License  README.md  Testcases.txt  smart_manufacturing_sim.py  ssh  ssh.pub
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/ditto_ros_bridge/share/ditto_ros_bridge/: package.bash  package.dsv  package.sh  package.zsh
install/ditto_ros_msgs/share/ditto_ros_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
install/ditto_ros_msgs/share/ditto_ros_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  ditto_ros_msgsConfig.cmake  ditto_ros_msgs__rosidl_typesupport_cExport-noconfig.cmake  ditto_ros_msgs__rosidl_typesupport_cExport.cmake  ditto_ros_msgs__rosidl_typesupport_cppExport-noconfig.cmake  ditto_ros_msgs__rosidl_typesupport_cppExport.cmake  ditto_ros_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  (+15 more)
log/: latest_build
src/: Testcases.txt
src/ditto_ros_bridge/: package.xml  setup.cfg  setup.py
src/ditto_ros_bridge/ditto_ros_bridge/: bridge_node.py
src/ditto_ros_bridge/launch/: bridge.launch.py
src/ditto_ros_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ditto_ros_msgs/msg/: Alert.msg  AssetMetadata.msg  CropData.msg  DittoThing.msg  EnergyConsumption.msg  EnvironmentalData.msg  Humidity.msg  Imu.msg  Pressure.msg  ProductionLine.msg  Temperature.msg  TrafficData.msg  TrafficLight.msg  WaterManagement.msg
(+86 files in other folders)
